# RPG-Naruto

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  settings.toml  wsgi.py
app/: __init__.py
app/configs/: __init__.py  auth.py  database.py
app/errors/: __init__.py  authentication_error.py
app/models/: __init__.py  bases_model.py  ninja_model.py  user_model.py  village_model.py
app/schema/: __init__.py  ninja_schema.py  user_schema.py  village_schema.py
app/services/: __init__.py  crud_handlers.py
app/views/: __init__.py  authentication.py  ninja_view.py  village_view.py
docs/: architecture.drawio  model.drawio
migrations/versions/: 2296a4ccfc36_create_models_village_and_ninja.py
tests/: test_naruto_rpg.py
